# Inside of setup.cfg
[metadata]
name = cfmUtils
version = file: VERSION
description = My package description
long_description = file: README.md #, CHANGELOG.rst, LICENSE.rst
keywords = Utilities, Utils
license = Apache-2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://github.com/cfm-uestc/cfmUtils
author = Xiaosu Zhu
author_email = aurora.studio@outlook.com

[options]
include_package_data = True
packages = find:
install_requires =
    torch >= 1.7
    tqdm
    nvidia-ml-py3
python_requires = >=3.7


[tool:pytest]
addopts = --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    serial
testpaths =
    test
