# Inside of setup.cfg
[metadata]
name = vlutils
version = file: VERSION
description = My package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Utilities, Utils
license = Apache-2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
url = https://github.com/cfm-uestc/vlutils
author = Xiaosu Zhu
author_email = aurora.studio@outlook.com

[options]
include_package_data = True
packages = find:
install_requires =
    torch >= 1.7
    tqdm
    rich
    nvidia-ml-py3
python_requires = >=3.9

[options.packages.find]
exclude =
    test
