# Inside of setup.cfg
[metadata]
name = vlutils
version = attr: vlutils:__version__
description = VL-Group Utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Utilities, Utils
license = Apache-2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
url = https://github.com/cfm-uestc/vlutils
author = Xiaosu Zhu
author_email = xiaosu.zhu@outlook.com

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    test
